loc fixes after testing

--- a/learn-certs-pr/azure-developer.yml
+++ b/learn-certs-pr/azure-developer.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Certification
-title: 'Microsoft-zertifiziert: Azure Developer Associate.'
+title: 'Microsoft-zertifiziert: Azure Developer Associate'
 metadata:
-  title: 'Microsoft-zertifiziert: Azure Developer Associate.'
+  title: 'Microsoft-zertifiziert: Azure Developer Associate'
   description: 'Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, beispielsweise Anwendungen und Services in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, und implementieren diese Lösungen.'
 uid: certification.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
