--- a/learn-certs-pr/exams/62-193.yml
+++ b/learn-certs-pr/exams/62-193.yml
@@ -31,7 +31,7 @@ skills:
 - Erleichterung der Selbstregulierung
 - Erleichterung der Problemlösung und Innovation in der realen Welt
 - Erleichterung der Nutzung von Informations- und Kommunikationsinstrumenten (ICT) durch die Studierenden
-- Nutzen Sie ICT, um ein effektiver Ausbilder zu sein.
+- Nutzen Sie ICT, um ein effektiver Ausbilder zu sein
 roles:
 - developer
 products:
