--- a/learn-certs-pr/exams/70-339.yml
+++ b/learn-certs-pr/exams/70-339.yml
@@ -28,7 +28,7 @@ locales:
 levels: 
 - intermediate
 skills:
-- Design der SharePoint-Infrastruktur (15 bis 20%)
+- Design der SharePoint-Infrastruktur (15-20%)
 - Planen von Authentifizierung und Sicherheit (15–20%)
 - Planen der Workload-Optimierung (15–20%)
 - Planen von Produktionslösungen (15–20%)
