--- a/learn-certs-pr/exams/az-202.yml
+++ b/learn-certs-pr/exams/az-202.yml
@@ -8,6 +8,7 @@ displayName: AZ-202
 summary: |-
   <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM 31. MÄRZ 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</div>
   <br/> 
+  
   Diese Prüfung ist nur für diejenigen Kandidaten bestimmt, die [Prüfung 70-532](https://www.microsoft.com/de-de/learning/exam-70-532.aspx) abgelegt haben&#58; Entwickeln von Microsoft Azure Solutions. Wenn Sie die Prüfung 532 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.
 
   Die Übergangsprüfung richtet sich an Personen, die bereits Fähigkeiten im Content-Bereich nachgewiesen haben, indem sie die bestehende(n) Prüfung(en) bestanden haben, die durch die neue rollenbasierte Zertifizierungsprüfungen ersetzt werden. Sie decken das Missverhältnis zwischen der aktuellen Zertifizierung und dem, was wir von Menschen erwarten, die neue Zertifizierung erhalten, ab. Wir wollen Personen mit dem gleichen Inhalt nicht erneut testen, wenn sie bereits Kompetenz nachgewiesen haben, indem sie die bestehende Prüfung bestanden haben.
@@ -19,7 +20,7 @@ summary: |-
   Die Kandidaten sollten in der Entwicklung von Anwendungen und Diensten unter Verwendung von Azure-Tools und -Technologien, einschließlich Speicherung, Sicherheit, Berechnung und Kommunikation, versiert sein.
 
   Die Kandidaten müssen über mindestens ein Jahr Erfahrung in der Entwickeln skalierbarer Lösungen in allen Phasen der Softwareentwicklung verfügen und über Kenntnisse in mindestens einer Cloud-gestützten Programmiersprache verfügen.
-subTitle: 'Diese Prüfung ist nur für Kandidaten bestimmt, die Prüfung [Prüfung 70-532](https://www.microsoft.com/de-de/learning/exam-70-532.aspx) abgelegt haben: Entwickeln von Microsoft Azure Solutions. Wenn Sie die Prüfung 532 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.'
+subTitle: 'Diese Prüfung ist nur für Kandidaten bestimmt, die Prüfung 70-532 abgelegt haben: Entwickeln von Microsoft Azure Solutions. Wenn Sie die Prüfung 532 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJV3
 scheduleExamUrl: https://examregistration.microsoft.com/
@@ -29,7 +30,7 @@ levels:
 - intermediate
 skills:
 - Entwicklung für Cloud-Speicherung (15-20%)
-- Entwickeln Sie Platform as a Service (PaaS)-Lösungen (30-35%)s
+- Entwickeln Sie Platform as a Service (PaaS)-Lösungen (30-35%)
 - Sichere Cloud-Lösungen (5-10%)
 - Entwicklung für ein Azure Cloud-Modell (25-30%)
 - Implementieren Sie Cloud-Integrationslösungen (15-20%)
