--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -6,10 +6,7 @@ metadata:
 uid: exam.md-101
 displayName: MD-101
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geändert hat.<br/></div>
-  <br/>
-  
-  Wenn Sie die Prüfung [Exam 70-698](https://www.microsoft.com/de-de/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten. Kandidaten für diese Prüfung sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Updates und Apps.
+  Wenn Sie die [Prüfung 70-698](https://www.microsoft.com/de-de/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten. Kandidaten für diese Prüfung sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Updates und Apps.
   <br/>
 
   Als Administratoren arbeiten die Kandidaten gewöhnlich mit dem Microsoft 365 Enterprise Administrator beim Entwurf und der Implementierung einer Gerätestrategie zusammen, die den geschäftlichen Anforderungen einer modernen Organisation gerecht wird.
@@ -26,7 +23,6 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geändert hat.
 - Betriebssysteme bereitstellen und aktualisieren (15-20%)
 - Verwaltung von Richtlinien und Profilen (35-40%)
 - Verwalten und Pflegen von Geräten (15-20%)
