--- a/learn-certs-pr/exams/ms-202.yml
+++ b/learn-certs-pr/exams/ms-202.yml
@@ -6,8 +6,9 @@ metadata:
 uid: exam.ms-202
 displayName: MS-202
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM 30. SEPTEMBER 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</div> eingestellt.
+  <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM 30. SEPTEMBER 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</div>
   <br/>
+  
   Diese Prüfung ist nur für Bewerber gedacht, die die [Prüfung 70-345&#58;](https://www.microsoft.com/de-de/learning/exam-70-345.aspx) abgelegt haben Designing and Deploying Microsoft Exchange Server 2016. Wenn Sie die Prüfung 345 nicht abgelegt haben, erhalten Sie mit dieser Prüfung keine Zertifizierung.
 
   Kandidaten für diese Prüfung sind Messaging-Administratoren, die Empfänger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und öffentliche Ordner sowohl in lokalen als auch in Cloud-Umgebungen bereitstellen, konfigurieren, verwalten, fehlerbeheben und überwachen.
