--- a/learn-certs-pr/index.yml
+++ b/learn-certs-pr/index.yml
@@ -72,18 +72,18 @@ trainingSection:
   - image:
       alt: Frau beim Betrachten eines Microsoft-Surface
       src: /learn/certifications/images/image-working-lady-laptop.jpg
-    title: Free learning paths to prepare
+    title: Kostenlose Lernpfade zur Vorbereitung
     summary: Mit Microsoft Learn kann jeder die Kernkonzepte in ihrer Geschwindigkeit und ihrem Zeitplan beherrschen. Ob es sich um ein einzelnes Modul handelt, um mehr über eine Kernaufgabe zu erfahren, oder um die vollständige Aufarbeitung eines Themas durch eine Sammlung von verwandten Modulen.
     browseLinks:
     - text: Alle Lernpfade durchsuchen
-      url: https://docs.microsoft.com/learn/browse/?resource_type=learning%20path
+      url: https://docs.microsoft.com/de-de/learn/browse/?resource_type=learning%20path
   - image:
       alt: Präsentation vor vier Personen, die an einem Tisch sitzen.
       src: /learn/certifications/images/image-working-group.jpg
     title: Vorbereitung mit einer vom Instruktor geleiteten Schulung
     summary: Microsoft Learning Partner bieten eine breite Palette von Lösungen, die Ihren Lernbedürfnissen entsprechen und Sie in die Lage versetzen, Ihre Schulungsziele zu erreichen. Microsoft-zertifizierte Trainer (MCTs) haben eine strenge Schulung absolviert und strenge technische Zertifizierungsanforderungen erfüllt.
     browseLinks:
-    - text: Durchsuchen Sie alle Präsenzschulungen.
+    - text: Durchsuchen Sie alle Präsenzschulungen
       url: /learn/certifications/courses/browse/
 
 resourcesSection:
