--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
   
-  Microsoft 365 Entwickler beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente ("Adaptive Cards" und "UI Fabric"), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
+  Microsoft 365 Entwickler beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (Adaptive Cards und UI Fabric), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
 subTitle: Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 levels:
 - intermediate
