loc fixes after testing

--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Certification
-title: Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
+title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
 metadata:
-  title: Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
-  Beschreibung: Lsungsarchitekten fr Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswrdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  fr die Anforderungen des Unternehmens klar definierte, kostengnstige Lsungen  zu entwickeln.
+  title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
+  description: Lsungsarchitekten fr Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswrdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  fr die Anforderungen des Unternehmens klar definierte, kostengnstige Lsungen  zu entwickeln.
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
