loc fixes after testing

--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Certification
-title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
+title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lösungsarchitekt Experte'
 metadata:
-  title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lsungsarchitekt Experte'
-  description: Lsungsarchitekten fr Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswrdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  fr die Anforderungen des Unternehmens klar definierte, kostengnstige Lsungen  zu entwickeln.
+  title: 'Microsoft-zertifiziert: Dynamics 365: Finanz- und Betriebs-Apps Lösungsarchitekt Experte'
+  description: Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  Lsungsarchitekten fr Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswrdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  fr die Anforderungen des Unternehmens klar definierte, kostengnstige Lsungen  zu entwickeln.
+  Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
   
   <div style="color:red"><br/><strong>NOTE&#58; This certification will not be available until January 27, 2020</strong></div>
-subTitle: Lsungsarchitekten fr Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswrdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  fr die Anforderungen des Unternehmens klar definierte, kostengnstige Lsungen  zu entwickeln.
+subTitle: Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
 levels:
-- fortgeschritten
+- advanced
 skills:
-- Identifizieren von Lsungsanforderungen
-- Entwerfen von Lsungskomponenten
-- Definition von Lsungstest- und Managementstrategien
+- Identifizieren von Lösungsanforderungen
+- Entwerfen von Lösungskomponenten
+- Definition von Lösungstest- und Managementstrategien
 roles:
-solution-architect
+- solution-architect
 type: role-based
 products:
 - dynamics
@@ -26,26 +26,26 @@ exams:
 - uid: exam.mb-700
 prerequisites:
 - uid: certification.d365-functional-consultant-financials
-  istOptional: falsch
+  isOptional: false
 - uid: certification.d365-functional-consultant-manufacturing
-  istOptional: falsch
+  isOptional: false
 - uid: certification.d365-functional-consultant-supply-chain-management
-  istOptional: falsch
+  isOptional: false
 - uid: certification.d365-finance-and-operations-apps-developer-associate
-  istOptional: falsch
+  isOptional: false
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  Beschreibung: Informieren Sie sich ber alle Zertifizierungen in einem bersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  Beschreibung: Verschaffen Sie sich einen berblick ber die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prfungswiederholung
-  Beschreibung: Sehen Sie sich zwei groartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhhen.
+- title: Prüfungswiederholung
+  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Untersttzung fur Zertifizierung
-  Beschreibung: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird an einem Werktag, Montag-Freitag, antworten.
+- title: Unterstützung fur Zertifizierung
+  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird an einem Werktag, Montag-Freitag, antworten.
   href: help.md
 - title: Dashboard zur Zertifizierung
-  Beschreibung: berprfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/en-us/learning/dashboard.aspx
+  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  href: https://www.microsoft.com/de-de/learning/dashboard.aspx
